--- a/server/db/config.json
+++ b/server/db/config.json
@@ -1,3 +1,3 @@
 {
-  "uri": "mongodb+srv://interview:<password>@cluster0.ljla9.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+  "uri": "mongodb+srv://<host>:<password>@<cluster>/<db>?retryWrites=true&w=majority"
 }
